project(Ctt)
cmake_minimum_required(VERSION 3.5)
add_compile_options(-std=c++11)

find_package(Threads)
FILE(GLOB_RECURSE CURRENT_SOURCES src/*.cpp)  
#FILE(GLOB_RECURSE CURRENT_SOURCES src/taskQueueTest.cpp src/TaskQueue.cpp)  
#add_executable(gdb_test ${CURRENT_SOURCES})
add_executable(gdb_test src/Task.cpp src/TaskQueue.cpp src/test.cpp)
target_link_libraries(gdb_test ${CMAKE_THREAD_LIBS_INIT})
